<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_rateable_image_poster"
        android:layout_width="92dp"
        android:layout_height="138dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/movie_arrival" />

    <TextView
        android:id="@+id/item_rateable_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/item_rateable_image_like"
        app:layout_constraintStart_toEndOf="@+id/item_rateable_image_poster"
        tools:text="Arrival" />

    <ImageView
        android:id="@+id/item_rateable_image_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_favorite_border_24dp" />

    <RatingBar
        android:id="@+id/item_rateable_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_rateable_image_poster"
        app:layout_constraintTop_toBottomOf="@+id/item_rateable_text_title"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
